--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <header></header>
     <main>
-      <div id="content"></div>
+      <div id="content-container"></div>
     </main>
     <footer>
       <p>© 2024 joel-jcs</p>
